Add openstack ironic project jobs now they are tested

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -20,3 +20,10 @@
         - dsvm-tempest-ironic-cimc-nexus-job-queens
         - dsvm-tempest-ironic-cimc-nexus-job-pike
         - dsvm-tempest-ironic-cimc-nexus-job-ocata
+
+- project:
+    name: openstack/ironic
+    check:
+      jobs:
+        - dsvm-tempest-ironic-cimc-job
+        - dsvm-tempest-ironic-ucsm-job
