Enable check pipeline triggers for gerrit patch creation

--- a/zuul.d/pipelines.yaml
+++ b/zuul.d/pipelines.yaml
@@ -2,10 +2,18 @@
 - pipeline:
     name: check
     manager: independent
+    success-message: "Build succeeded (check pipeline)."
+    failure-message: "Build failed (check pipeline).  To recheck use 'recheck'."
     trigger:
       gerrit:
+        - event: patchset-created
+        - event: change-restored
         - event: comment-added
-          comment: cisco-zuulv3-test
+          comment: (?i)^(Patch Set [0-9]+:)?( [\w\\+-]*)*(\n\n)?\s*recheck
+    require:
+      gerrit:
+        open: True
+        current-patchset: True
     success:
       gerrit:
         Verified: 1
