--- a/zuul.d/pipelines.yaml
+++ b/zuul.d/pipelines.yaml
@@ -10,6 +10,19 @@
         - event: change-restored
         - event: comment-added
           comment: (?i)^(Patch Set [0-9]+:)?( [\w\\+-]*)*(\n\n)?\s*recheck
+      github-smart:
+        - event: pull_request
+          action:
+            - opened
+            - changed
+            - reopened
+        - event: pull_request
+          action: comment
+          comment: (?i)^\s*recheck\s*$
+    start:
+      github-smart:
+        status: pending
+        comment: false
     require:
       gerrit:
         open: True
@@ -18,9 +31,13 @@
       gerrit:
         Verified: 1
       buildsdb:
+      github-smart:
+        status: 'success'
     failure:
       gerrit:
         Verified: -1
+      github-smart:
+        status: 'failure'
       buildsdb:
 
 - pipeline:
