Ensure we don't enqueue closed pull requests from github

--- a/zuul.d/pipelines.yaml
+++ b/zuul.d/pipelines.yaml
@@ -27,6 +27,8 @@
       gerrit:
         open: True
         current-patchset: True
+      github-smart:
+        open: True
     success:
       gerrit:
         Verified: 1
