--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -1,35 +1,4 @@
 - project:
-    name: openstack/networking-cisco
-    check:
-      jobs:
-        - dsvm-tempest-smoke-ucsm-job-rocky:
-            voting: false
-        - dsvm-tempest-smoke-ucsm-job-queens
-        - dsvm-tempest-smoke-ucsm-job-pike
-        - dsvm-tempest-smoke-ucsm-job-ocata
-        - dsvm-tempest-smoke-ucsm-job-newton
-        - dsvm-tempest-smoke-ucsm-job-mitaka
-        - dsvm-tempest-smoke-nexus-job-rocky:
-            voting: false
-        - dsvm-tempest-smoke-nexus-job-queens
-        - dsvm-tempest-smoke-nexus-job-pike
-        - dsvm-tempest-smoke-nexus-job-ocata
-        - dsvm-tempest-smoke-nexus-job-newton
-        - dsvm-tempest-smoke-nexus-job-mitaka
-        - dsvm-tempest-smoke-asr1k-job-rocky:
-            voting: false
-        - dsvm-tempest-smoke-asr1k-job-queens
-        - dsvm-tempest-smoke-asr1k-job-pike
-        - dsvm-tempest-smoke-asr1k-job-ocata
-        - dsvm-tempest-smoke-asr1k-job-newton
-        - dsvm-tempest-smoke-asr1k-job-mitaka
-        - dsvm-tempest-ironic-cimc-nexus-job-rocky:
-            voting: false
-        - dsvm-tempest-ironic-cimc-nexus-job-queens
-        - dsvm-tempest-ironic-cimc-nexus-job-pike
-        - dsvm-tempest-ironic-cimc-nexus-job-ocata
-
-- project:
     name: openstack/ironic
     check:
       jobs:
@@ -40,4 +9,4 @@
     name: openstack-dev/sandbox
     check:
       jobs:
-        - dsvm-tempest-ironic-cimc-job
+        - pctp-base
