--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -2,8 +2,7 @@
     name: openstack/ironic
     check:
       jobs:
-        - dsvm-tempest-ironic-cimc-job
-        - dsvm-tempest-ironic-ucsm-job
+        - pctp-base
 
 - project:
     name: openstack-dev/sandbox
