commented pre-step

--- a/zuul.d/base-jobs.yaml
+++ b/zuul.d/base-jobs.yaml
@@ -2,7 +2,7 @@
 - job:
     name: pctp-base
     parent: base
-    pre-run: playbooks/pre.yaml
+    #    pre-run: playbooks/pre.yaml
     run: playbooks/run.yaml
     roles:
       - zuul: zuul-jobs
