Trying Ironic run

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -1,11 +1,22 @@
 - project:
-    name: openstack/ironic
-    check:
-      jobs:
-        - pctp-base
-
-- project:
     name: openstack-dev/sandbox
+    #    templates:
+    #      - check-requirements
+    #      - openstack-cover-jobs
+    #      - openstack-lower-constraints-jobs
+    #      - openstack-python-jobs
+    #      - openstack-python35-jobs
+    #      - openstack-python36-jobs
+    #      - periodic-stable-jobs
+    #      - publish-openstack-docs-pti
+    #      - release-notes-jobs-python3
     check:
       jobs:
+              #        - ironic-tempest-dsvm-bfv
+              #        - ironic-tempest-dsvm-ipa-partition-pxe_ipmitool-tinyipa-python3
+              #        - ironic-tempest-dsvm-ipa-partition-redfish-tinyipa
+              #        - ironic-tempest-dsvm-ipa-partition-uefi-pxe_ipmitool-tinyipa
+              #        - ironic-tempest-dsvm-ipa-wholedisk-bios-agent_ipmitool-tinyipa
+              #        - ironic-tempest-dsvm-ipa-wholedisk-bios-agent_ipmitool-tinyipa-indirect
+              #        - ironic-tempest-dsvm-ipa-partition-bios-agent_ipmitool-tinyipa-indirect
         - pctp-base
