--- a/playbooks/pre.yaml
+++ b/playbooks/pre.yaml
@@ -1,5 +1,19 @@
 ---
 - hosts: all
+  vars:
+    projects:
+      - openstack/ironic
+#      - openstack/python-ironicclient
+#      - openstack/ironic-python-agent
+#      - openstack/ironic-lib
+#      - openstack/ironic-tempest-plugin
+    devstack_gate_env_override:
+      DEVSTACK_GATE_VIRT_DRIVER: "ironic"
+      DEVSTACK_GATE_CONFIG_DRIVE: "1"
+      DEVSTACK_GATE_TEMPEST_REGEX: "ironic"
+      DEVSTACK_GATE_TEMPEST_BAREMETAL_BUILD_TIMEOUT: "1000"
+      DEVSTACK_GATE_OS_TEST_TIMEOUT: "2000"
+  tasks:
+    - ping:
   roles:
-    - start-zuul-console
-    - log-inventory
+    - populate-ironic-hardware-info
